[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2"
yew-router = { git = "https://github.com/yewstack/yew.git" }
log = "0.4.22"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
wasm-bindgen-cli = "0.2.78"
